# sample-mcp-workflow-orchestrator-for-agentcore

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  GETTING_STARTED.md  HOW_IT_WORKS.md
lambda/: Dockerfile.cloudtrail  Dockerfile.cloudwatch  Dockerfile.documentation  Dockerfile.iam  Dockerfile.pricing  handler.py
mcp_registry/: aws_mcp_server.yaml  cloudtrail.yaml  cloudwatch.yaml  iam.yaml  pricing.yaml  well_architected.yaml
orchestrator/: __init__.py  cli.py  config.py  correlation.py  decision_log.py  gateway_client.py  planner.py  registry.py
scenarios/: README.md  scenario_1_incident.md  scenario_2_architecture_review.md  scenario_3_cost_optimization.md  scenario_4_security_review.md
scripts/: deploy_lambda_servers.sh  destroy_lambda_servers.sh  test_all_tools.py
tests/: test_decision_log.py  test_planner.py  test_registry.py
